<resources>
    <string name="app_name">FootstepsGeo</string>
    <string name="greeting_core">You know where your family is</string>

    <string name="sign_in">Sign in via Google</string>
    <string name="sign_out">Sign out</string>

    <string name="friends">Friends</string>
    <string name="globe">Globe</string>
    <string name="account">Account</string>

    <string name="friends_you_follow">Friends you follow</string>

    <string name="submit">Submit</string>
    <string name="add_friend">Add friend</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="get_route">Get route</string>

    <string name="there_are_no_friends">There are no friends yet. Add them first.</string>
    <string name="enter_your_friends_personal_code_here">Enter your friend\'s personal code here!</string>
    <string name="share_code">Share code</string>
    <string name="personal_code">Personal code</string>
    <string name="personal_code_mask">●●●●●●</string>
    <string name="personal_code_sub_description">Share it with others so they can find you</string>
    <string name="your_personal_code_copied_to_clipboard">Your personal code copied to clipboard!</string>
    <string name="my_code_in_app_use_it_to_find_me" formatted="true">My code in %1$s app is %2$s. Use it to find me! 🌍</string>
    <string name="share_via">Share via…</string>

    <string name="oh_no">Oh no!</string>
    <string name="you_are_offline">You\'re offline. Check your internet connection.</string>
    <string name="na">not available</string>
    <string name="init_count">0</string>

    <string name="error_default">An error occurred. Please try again later.</string>
    <string name="error_no_user">No user with this code was found.</string>
    <string name="permission_is_needed">The permission is needed.</string>

    <string name="press_back_again_to_quit">Press back again to quit</string>
    <string name="fab_description">Show me</string>
    
    <string name="time_now">Just now</string>
    <string name="time_ome_minute_ago">One minute ago</string>
    <string name="time_few_minutes_ago" formatted="true">%1$s minutes ago</string>
    <string name="time_hours_minutes" formatted="true">%1$s:%2$s</string>

    <string name="percent">%</string>
    <string name="km">km</string>
    <string name="m">m</string>
</resources>