<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f9"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/imageUserpic"
        android:layout_width="@dimen/size_userpic_small"
        android:layout_height="@dimen/size_userpic_small"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAccountNameGreeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal_small"
        android:fontFamily="@font/podkova"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageUserpic"
        app:layout_constraintStart_toEndOf="@+id/imageUserpic"
        app:layout_constraintTop_toTopOf="@+id/imageUserpic" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPersonalCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginBottom="@dimen/margin_vertical_xlarge"
        android:background="@drawable/personal_code_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageUserpic">

        <ImageButton
            android:id="@+id/imageButtonCopyPersonalCode"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:adjustViewBounds="false"
            android:background="@drawable/button_border_selector"
            android:clickable="true"
            android:contextClickable="false"
            android:cropToPadding="false"
            android:focusable="true"
            android:padding="@dimen/padding_big"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_copy"
            app:tint="@color/blue_a400" />

        <TextView
            android:id="@+id/textPersonalCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:fontFamily="@font/podkova"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textCodeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginBottom="@dimen/margin_vertical_small"
        android:fontFamily="@font/podkova"
        android:text="@string/personal_code"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/layoutPersonalCode"
        app:layout_constraintStart_toStartOf="@+id/layoutPersonalCode" />

    <TextView
        android:id="@+id/textCodeSubDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        android:fontFamily="@font/podkova"
        android:text="@string/personal_code_sub_description"
        android:textAlignment="textStart"
        android:textColor="@color/grey_2b"
        android:textSize="@dimen/text_size_regular"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/layoutPersonalCode"
        app:layout_constraintStart_toStartOf="@+id/textCodeDescription"
        app:layout_constraintTop_toBottomOf="@+id/layoutPersonalCode" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonShareCode"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_button"
        android:layout_marginBottom="@dimen/margin_vertical_xlarge"
        android:background="@drawable/button_primary_selector"
        android:text="@string/share_code"
        android:textSize="@dimen/text_size_regular"
        app:iconGravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/layoutPersonalCode"
        app:layout_constraintStart_toStartOf="@+id/layoutPersonalCode" />

</androidx.constraintlayout.widget.ConstraintLayout>